# spin-sample-leptos-rs

./: .env-sample  .gitignore  Cargo.toml  README.md  justfile  spin.toml
backend/: Cargo.toml  spin.toml.old
backend/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml
frontend/src/: auth0.rs  main.rs
static/: spin.toml
