[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_oidc = "0.4.1"
leptos_router = { version = "0.6.9", features = ["csr", "nightly"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.115"
url = "2.5.0"
